--- a/srpc-spring/pom.xml
+++ b/srpc-spring/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>spring-boot-starter</artifactId>
             <version>2.6.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.miex</groupId>
+            <artifactId>service-core</artifactId>
+            <version>${service-core-version}</version>
+        </dependency>
     </dependencies>
 
 </project>
