--- a/srpc-spring/pom.xml
+++ b/srpc-spring/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>srpc-spring</artifactId>
+    <version>${service-core-version}</version>
 
     <properties>
 <!--        <maven.compiler.source>11</maven.compiler.source>-->
@@ -20,7 +21,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
-            <version>2.6.3</version>
+            <version>2.6.6</version>
         </dependency>
         <dependency>
             <groupId>com.miex</groupId>
