--- a/service-core/pom.xml
+++ b/service-core/pom.xml
@@ -36,7 +36,11 @@
             <artifactId>jedis</artifactId>
             <version>4.2.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
     </dependencies>
 
 </project>
