--- a/pom.xml
+++ b/pom.xml
@@ -10,52 +10,52 @@
     <version>1.0.0</version>
 
     <modules>
-        <module>service-core</module>
+        <module>srpc-core</module>
         <module>srpc-spring</module>
     </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <srpc-version>1.2.x</srpc-version>
-        <service-core-version>1.2.1-SNAPSHOT</service-core-version>
+        <srpc.version>1.2.2</srpc.version>
+        <service-core.version>1.2.1-SNAPSHOT</service-core.version>
+        <netty.version>4.1.65.Final</netty.version>
+        <slf4j-log4j12.version>1.7.26</slf4j-log4j12.version>
+        <javassist.version>3.29.0-GA</javassist.version>
+        <guava.version>31.1-jre</guava.version>
+        <spring-core.version>5.3.15</spring-core.version>
+        <jedis.version>4.2.2</jedis.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
-            <version>3.29.0-GA</version>
+            <version>${javassist.version}</version>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>4.1.65.Final</version>
+            <version>${netty.version}</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.projectlombok</groupId>-->
-<!--            <artifactId>lombok</artifactId>-->
-<!--            <version>1.18.16</version>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <version>1.7.26</version>
+            <version>${slf4j-log4j12.version}</version>
         </dependency>
     </dependencies>
 
-
-<!--    <build>-->
-<!--        <plugins>-->
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-compiler-plugin</artifactId>-->
-<!--                <configuration>-->
-<!--                    <source>11</source>-->
-<!--                    <target>11</target>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
-<!--        </plugins>-->
-<!--    </build>-->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
