--- a/srpc-spring/pom.xml
+++ b/srpc-spring/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>srpc-spring</artifactId>
-    <version>${service-core-version}</version>
+    <version>${srpc.version}</version>
 
     <properties>
 <!--        <maven.compiler.source>11</maven.compiler.source>-->
@@ -19,14 +19,28 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-            <version>2.6.6</version>
+            <groupId>com.miex</groupId>
+            <artifactId>srpc-core</artifactId>
+            <version>${srpc.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.miex</groupId>
-            <artifactId>service-core</artifactId>
-            <version>${service-core-version}</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring-core.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring-core.version}</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>2.6.6</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
